import { create } from '@bufbuild/protobuf';
import type { ConnectRouter } from '@connectrpc/connect';
import { fastifyConnectPlugin } from '@connectrpc/connect-fastify';
import {
  AuthService,
  type LoginRequest,
  LoginResponseSchema,
  LogoutResponseSchema,
  VerifyResponseSchema,
} from '@komo-manager/connect/komoriuta/v1/auth_pb';
import { fastify } from 'fastify';

// ConnectRPCãƒ«ãƒ¼ã‚¿ãƒ¼ã®ä½œæˆ
const routes = (router: ConnectRouter) => {
  router.service(AuthService, {
    async login(req: LoginRequest) {
      console.log('Login request received:', {
        userId: req.userId,
        password: '***',
      });

      // ä»®å®Ÿè£…: ã¨ã‚Šã‚ãˆãšãƒªã‚¯ã‚¨ã‚¹ãƒˆã‚’å—ã‘å–ã£ã¦æˆåŠŸãƒ¬ã‚¹ãƒãƒ³ã‚¹ã‚’è¿”ã™
      return create(LoginResponseSchema, {
        success: true,
        failedAttempts: 0,
      });
    },

    async logout() {
      console.log('Logout request received');
      return create(LogoutResponseSchema, {
        success: true,
      });
    },

    async verify() {
      console.log('Verify request received');
      return create(VerifyResponseSchema, {
        authenticated: true,
      });
    },
  });
};

// Fastifyã‚µãƒ¼ãƒãƒ¼ã‚’ä½œæˆ
const server = fastify();

// ConnectRPCãƒ—ãƒ©ã‚°ã‚¤ãƒ³ã‚’ç™»éŒ²
await server.register(fastifyConnectPlugin, {
  routes,
});

// é€šå¸¸ã®ã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆ
server.get('/api/get', (_, reply) => {
  reply.type('text/plain').send('Hello, Bun with Fastify and ConnectRPC!');
});

// ã‚µãƒ¼ãƒãƒ¼èµ·å‹•
const PORT = 3000;
await server.listen({ host: 'localhost', port: PORT });

console.log(`ğŸ¦Š Fastify server is running at http://localhost:${PORT}`);
console.log(`ğŸ“¡ ConnectRPC endpoint: http://localhost:${PORT}`);
console.log(`   Available services: komoriuta.v1.AuthService`);
